# Inzva_DL24

./: .gitignore
hw1/: main.py  tempCodeRunnerFile.py  testing.py  training.py
hw1/answers/hw1/: CIFAR10_Introduction.ipynb  main.py  testing.py  training.py
hw1/answers/hw1/utils/: data_utils.py  model.py  viz_utils.py
hw1/utils/: data_utils.py  model.py  viz_utils.py
hw2/: test.py  train.py
hw2/model/: unet.py
hw2/utils/: data_utils.py  metric_utils.py  model_utils.py  viz_utils.py
kaggle-nlp-getting-started/: README.md  roberta-lr-scheduler.ipynb
w11/: Llama3_Fine_Tuning_w_alpaca_ds_16_11_24.ipynb  Sentiment_Classificaiton_w_BERT_16_11_24.ipynb  Text_Summarization_w_T5_16_11_24.ipynb
w2/: W2_exercise.ipynb  W2_regularization.ipynb
w3/: W3_optimization.ipynb
w4-5/notebook/: classification_resnet.ipynb  classification_resnet_transfer.ipynb  pyproject.toml  utils.py
w4-5/notebook/notebooks/: detection.ipynb  segmentation.ipynb
w4/notebook/: classification_inzva_net.ipynb
w5/notebooks/: batch_size_comparison.ipynb  segmentation.ipynb
w6-7/notebooks/charlm/: charlm.ipynb
w6-7/notebooks/charlm/model/: char.tokenizer
w6-7/notebooks/embeddings/: embeddings.ipynb
w6-7/notebooks/embeddings/.ipynb_checkpoints/: embeddings-checkpoint.ipynb
w6-7/notebooks/emotion/model/: word.tokenizer
w6-7/v2/: charlm.ipynb
w6/notebooks/charlm/: charlm.ipynb
w6/v2/: charlm.ipynb  emotion.ipynb
w7/notebooks/charlm/: charlm.ipynb  dune.txt
w7/notebooks/emotion/.ipynb_checkpoints/: emotion-checkpoint.ipynb
